# cpp-extras

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
cli/: Cli.hpp
explorer/: Explorer.hpp  ExplorerFunctions.hpp  FileHandler.hpp  List.hpp
interface/: interface.hpp
interface/linux/: hmenu.hpp  menu.hpp  vmenu.hpp
interface/windows/: hmenu.hpp  menu.hpp  vmenu.hpp
source/: explorer.cpp  explorer2.cpp  interface.cpp
tests/: cli.cpp  explorer.cpp  fstring.cpp
